--- a/main.css
+++ b/main.css
@@ -1,56 +1,77 @@
 
-:root{
+*{
     margin: 0;
     padding: 0;
    box-sizing: border-box;
+  
 }
-
-header {
-min-height: 50vh;
+html{
+    font-family: "Poppins", sans-serif;
+}
+.header {
+    display: flex;
     margin: 0;
     padding: 0;
     background-image:url(./img/header.jpg);
     background-size: cover;
     background-position: center;
-    background-repeat: no-repeat;
-    justify-content: center;
-    align-items: center;
-    padding: 0%;
-
-       
+    width: 100vw;
+    height: 70vh;
+    flex-direction: column;
+    font-size: 1rem;
 }
 
 .icon_burguer{
-   display: flex;
-    width: 24px;
-    height: 24px;
+    width: 30px;
+    height: 30px;
+    margin: 60px 0px 0% 0px;
 }
 
+.img {
+    width: 100%;
+}
 .logo{
-    display: flex;
-    width: 213px;
-    height: 96px;
-    margin: 0 101px 62px 43px;
-}
-
-button{
-    display: flex;
-    background-color: rgb(205, 236, 226);
-    width: 100px;
-    text-align: center;
+    margin: 25px 0 25px 0;
+    width:50%;
+    height: 50%;
     justify-content: center;
-    border-radius: 100px 0 100px 0px;
+    
+} 
+
+.caja1{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    height:187px;
+ 
+}
+.caja2{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+    height: auto;
+    width: auto;
+}
+.boton__comprar{
+    background-color: #0c474b;
+    width: 200px;
+    text-align: center;
+    align-items: center;
+    border-radius: 15px 0 15px 0px;
     border-color: rgb(95, 124, 114);
-    color: #0c474b;
-    border-color: bisque;
-
-
+    color:#ffe4c4;
+    border-color: #ffe4c4;
+    margin: 20%;
+    height: 50px;
+    
 }
 
 h1{
    text-align: center;
     color: #0c474b; 
-text-align: justify;
+
 }
 h2 {
     text-align: center;
@@ -58,9 +79,7 @@ h2 {
 
 }
  .icon_1{
-  display: flex;
   justify-content: center;
-
  }
 
  p {
@@ -68,4 +87,100 @@ h2 {
     color: #0c474b;
  }
 
+.creando{
+    width: 100vw;
+}
+.main {
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #f0ebe5;
+    padding: 50px;
+    gap:20px
+   
+}
+.necesitas{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
 
+
+
+.sostenible{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    margin: 20%;
+}
+
+
+
+.guia{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+.envio{
+    background-color: #ff975a;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+   color: #f0ebe5; 
+   height: 80vh;
+   gap:30px
+}
+.h2__envio{
+    color: #f0ebe5; 
+}
+.p__envio{
+    color: #f0ebe5; 
+}
+.h3__envio{
+    color: #f0ebe5; 
+}
+
+.disfruta{
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #f0ebe5;
+    padding: 50px;
+    height: 80vh;
+    gap: 30px;
+}
+.creando{
+    height: 50vh;
+    width: 100vw;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.img__creando{
+    height: 150vh;
+    width: 150vw;
+}
+.footer{
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #0c474b;
+    color: #f0ebe5;
+    height: 100vh;
+}
+ol{
+list-style: none;
+color: #ffffff;
+}
+
+.h2__footer{
+    color: #f0ebe5;
+}
