--- a/main.css
+++ b/main.css
@@ -18,109 +18,81 @@ html{
     width: 100vw;
     height: 100vh;
     flex-direction: column;
-    font-size: 1rem;
+    
 }
-
 .icon_burguer{
-    width: 30px;
-    height: 30px;
-    margin: 60px 0px 0% 0px;
+    width: 90px;
+    height: 90px;
+    margin: 100px 0px 0% 0px;
 }
-
 .img {
     width: 100%;
 }
 .logo{
-    margin: 25px 0 25px 0;
-    width:50%;
-    height: 50%;
+    margin: 50px 25px 25px 0;
+    width: 600px;
+    height: 600px;
     justify-content: center;
     
 } 
-
 .caja1{
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    height:30vh;
+    height:40vh;
 }
 .caja2{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 30px;
-    height: 80vh;
-    width: auto;
+    height: 60vh;
+    gap: 20px;
+   
 }
 .boton__comprar{
     background-color: #0c474b;
-    width: 40vw;
+    width: 50vw;
     border-radius: 15px 0 15px 0px;
     border-color: rgb(95, 124, 114);
     color:#bdb9b5;
-    margin: 35%;
+    margin-top: 40%;
     height: 10vh;
-    font-size: 1.5rem;
-    margin-right:40px;
+    font-size: 24px;
+   
+    
+ 
 }
-
 h1{
    text-align: center;
     color: #0c474b; 
-    font-size: 2.5rem;
-    gap: 15vh;
+    font-size: 60px;
+   
+   
 }
-
 h2 {
     text-align: center;
     color: #0c474b;
 }
- .icon_1{
-  justify-content: center;
- }
+
 
  p {
     text-align: center;
     color: #0c474b;
  }
-
 .creando{
     width: 100vw;
 }
-.main {
-    display:flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: #f0ebe5;
+.modulo2{
+    display:grid;
+    grid-template-columns: 1fr;
+    place-items: center;
+    background-color: #f0eae5;
     padding: 50px;
-    gap:20px;
     font-size: 1.5rem;
-    
-   
-}
-.necesitas{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-}
+  }
+  
 
-.sostenible{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    margin: 20%;
-}
-
-.guia{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-}
 .envio{
     background-color: #ff975a;
     display: flex;
@@ -128,7 +100,7 @@ h2 {
     justify-content: center;
     flex-direction: column;
     color: #f0ebe5; 
-    height: 80vh;
+    height: 60vh;
     gap:30px;
 }
 .img__envio{
@@ -138,7 +110,7 @@ h2 {
 }
 .h1__envio{
     color: white; 
-    font-size: 2.5rem;
+    font-size: 2rem;
 }
 .p__envio{
     color: white; 
@@ -147,9 +119,8 @@ h2 {
 .h3__envio{
     color: white; 
     text-decoration: underline;
-    font-size: 1.5rem;
+    font-size: 2rem;
 }
-
 .disfruta{
     display:flex;
     flex-direction: column;
@@ -159,7 +130,8 @@ h2 {
     height: 80vh;
     gap: 30px;
     font-size: 1.5rem;
-    color: #be4ea2;
+    color: #ba509f;
+    
 }
 .creando{
     height: 100vh;
@@ -169,9 +141,19 @@ h2 {
     justify-content: center;
     align-items: center;
 }
+.boton__comprar2{
+    background-color: #0c474b;
+    width: 50vw;
+    border-radius: 15px 0 15px 0px;
+    border-color: rgb(95, 124, 114);
+    color:#bdb9b5;
+    height: 10vh;
+    font-size: 1.5rem;
+ 
+}
 .img__creando{
     height: 100vh;
-    width: 150vw;
+    width: 100vw;
 }
 .footer{
     display:flex;
@@ -179,18 +161,46 @@ h2 {
     align-items: center;
     background-color: #0c474b;
     color: #f0ebe5;
-    height: 100vh;
-   padding:  10%;
-    text-align: justify;
+    height: 80vh;
     justify-content: space-around;
+    text-align: justify;
+    font-size: 1.5rem;
+  
 }
-ol{
-list-style: none;
-color: #ffffff;
+.listado{
+    text-decoration: none;
+    list-style: none;
+    color:#bdb9b5;
+}
+.titulo_listado{
+    font-size: 2rem;
+    color: #bdb9b5;
 }
 
-.Tienda{
-    color: #f0ebe5;
-    font-size: 1.5rem;
-    gap: 10%;
+
+@media all and (min-width:900px){
+    .h1{
+        text-align: left;
+        max-width: 50%;
+    }
+    .titulo_modulo_2{
+        grid-column: span 3;
+    }
+   
+}
+
+@media all and (min-width:1728) {
+.icon_burguer{
+    display: none !important; }
+.boton__comprar{
+margin: 50%;
+}
+.img__envio{
+    height: 600px;
+    width: 600px;
+}
+
+.modulo2{
+    grid-template-rows: 1fr 1fr 1fr;
+}
 }
