--- a/main.css
+++ b/main.css
@@ -1,4 +1,3 @@
-
 *{
     margin: 0;
     padding: 0;
@@ -21,7 +20,7 @@ html{
     
 }
 .icon_burguer{
-    width: 90px;
+    width: 50px;
     height: 90px;
     margin: 100px 0px 0% 0px;
 }
@@ -52,29 +51,30 @@ html{
 }
 .boton__comprar{
     background-color: #0c474b;
-    width: 50vw;
-    border-radius: 15px 0 15px 0px;
+    width: 30vw;
     border-color: rgb(95, 124, 114);
     color:#bdb9b5;
     margin-top: 40%;
     height: 10vh;
-    font-size: 24px;
-   
+    font-size: 50px;
     
- 
+   
+}
+.boton__comprar:hover{
+    background-color: #b6c8c9;
+    color:#0c474b;
+    border-radius: 50%;
 }
 h1{
    text-align: center;
     color: #0c474b; 
     font-size: 60px;
    
-   
 }
 h2 {
     text-align: center;
     color: #0c474b;
 }
-
 
  p {
     text-align: center;
@@ -90,9 +90,9 @@ h2 {
     background-color: #f0eae5;
     padding: 50px;
     font-size: 1.5rem;
+  
   }
   
-
 .envio{
     background-color: #ff975a;
     display: flex;
@@ -130,7 +130,7 @@ h2 {
     height: 80vh;
     gap: 30px;
     font-size: 1.5rem;
-    color: #ba509f;
+    color:  #0c474b;
     
 }
 .creando{
@@ -144,63 +144,154 @@ h2 {
 .boton__comprar2{
     background-color: #0c474b;
     width: 50vw;
-    border-radius: 15px 0 15px 0px;
     border-color: rgb(95, 124, 114);
     color:#bdb9b5;
     height: 10vh;
     font-size: 1.5rem;
  
 }
+.boton__comprar2:hover{
+    background-color: #b6c8c9;
+    color:#0c474b;
+    border-radius: 50%;
+}
 .img__creando{
     height: 100vh;
     width: 100vw;
 }
 .footer{
-    display:flex;
-    flex-direction: column;
+    display:grid;
+    grid-template-rows: 1fr;
     align-items: center;
     background-color: #0c474b;
-    color: #f0ebe5;
-    height: 80vh;
-    justify-content: space-around;
+    color: #b6c8c9;
+    height: 90vh;
+    gap:5%; 
     text-align: justify;
     font-size: 1.5rem;
-  
+    padding-top: 15%;
+
+    height: 70vh;
+}
+a{
+    text-decoration: none;
 }
 .listado{
-    text-decoration: none;
     list-style: none;
     color:#bdb9b5;
 }
 .titulo_listado{
     font-size: 2rem;
     color: #bdb9b5;
+    text-decoration: none;
+    list-style: none;
+}
+.listado2{
+   padding-left: 15%;
+    text-decoration: none;
+    list-style: none;
+    color: white;
+}
+li{
+    text-decoration: none;
+    text-align: center;
+}
+.redes{
+  align-items: center;
+  display: flex;
+  justify-content: center;
+}
+.flecha{
+    height: 50px;
+    width:50px;
+    place-items: end;
+}
+.flecha img{
+    width: 100%;
+    height: 100%;
+}
+
+@media all and (min-width:900px){
+    .logo{
+    height: 20vh;
+    width: 20vw;
+    align-items: center;
+    gap:30 px
+  }
+ 
+    .caja2{
+    width: 60%;
+    height: 30vh;
+    padding-left: 40px;
+
+   }
+   
+    .titulo_modulo_2{
+        grid-column: span 3;
+        font-size: 2rem;
+        margin: 0, 20%, 0, 20%;
+        
+    }
+
+   .footer{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    align-items: center;
+    height: 30vh;
+    gap: 10px;
+    padding: 0;
+    text-align: justify;
+    }
+  
+   .flecha{
+    height: 50px;
+    width: 50px;
+    align-items: flex-end;
+    display: grid;
+   }
+   .img__envio{
+    height: 150px;
+    width: 150px;
+}
+    .menu{
+    text-align: justify;
+    font-size: 1rem;
 }
 
 
-@media all and (min-width:900px){
-    .h1{
-        text-align: left;
-        max-width: 50%;
-    }
-    .titulo_modulo_2{
-        grid-column: span 3;
-    }
-   
 }
 
 @media all and (min-width:1728) {
 .icon_burguer{
-    display: none !important; }
+    height: 50px;
+    width: 20px;
+}
 .boton__comprar{
-margin: 50%;
+    gap: 100px;
 }
 .img__envio{
-    height: 600px;
-    width: 600px;
+    height: 60px;
+    width: 60px;
 }
 
 .modulo2{
-    grid-template-rows: 1fr 1fr 1fr;
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    grid-template-columns: 50% 25% 25%;
+}
+.imagen__modulo{
+    grid-column: span 2;
+    
+}
+
+.img__creando{
+    display: flex;
+    height: 50%;
+    width: 50%;
+}
+.disfruta{
+    display: flex;
+    height: 50%;
+    width: 50%;
 }
 }
