--- a/main.css
+++ b/main.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
    box-sizing: border-box;
+
   
 }
 html{
@@ -9,155 +10,171 @@ html{
 }
 .header {
     display: flex;
+    flex-wrap: wrap;
     margin: 0;
     padding: 0;
     background-image:url(./img/header.jpg);
     background-size: cover;
     background-position: center;
-    width: 100vw;
-    height: 100vh;
+    min-width: 100vw;
+    min-height: 100vh;
     flex-direction: column;
     
 }
 .icon_burguer{
-    width: 50px;
-    height: 90px;
-    margin: 100px 0px 0% 0px;
+    width: 24px;
+    height: 24px;
+    margin: 50px 0px 0% 0px;
+    text-align: center;
+   position: absolute;
+   top: 20px;
+   left: 20px;
 }
-.img {
-    width: 100%;
-}
+
+
 .logo{
-    margin: 50px 25px 25px 0;
-    width: 600px;
-    height: 600px;
-    justify-content: center;
-    
+    position:absolute;
+    width: 50%;
+    height: 50%;
+   align-items: center; 
+   justify-content: space-between; 
+   left:20%;
 } 
-.caja1{
+.box1{
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    flex-wrap: wrap;
+    align-items: center;
     height:40vh;
+    min-width: 100vw;
+    position: absolute;
 }
-.caja2{
+
+.box2{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 60vh;
     gap: 20px;
-   
 }
-.boton__comprar{
+.buy__button{
     background-color: #0c474b;
-    width: 30vw;
+    width: 40vw;
     border-color: rgb(95, 124, 114);
-    color:#bdb9b5;
+    color:#ffffff;
     margin-top: 40%;
-    height: 10vh;
-    font-size: 50px;
-    
-   
+    height: 7vh;
+    font-size: 20px;
 }
-.boton__comprar:hover{
-    background-color: #b6c8c9;
-    color:#0c474b;
-    border-radius: 50%;
+.buy__button:hover{
+        background-color: #f0ebe5;
+        color:#0c474b;
 }
 h1{
    text-align: center;
     color: #0c474b; 
-    font-size: 60px;
-   
+    font-size: 30px; 
 }
 h2 {
     text-align: center;
     color: #0c474b;
+    font-size: 22px;
 }
 
- p {
+p {
     text-align: center;
     color: #0c474b;
+    gap: 20px;
  }
-.creando{
-    width: 100vw;
+.creating{
+    width: 50vw;
+    height: 50vw;
+    display: flex;
 }
-.modulo2{
+.module2{
     display:grid;
-    grid-template-columns: 1fr;
     place-items: center;
     background-color: #f0eae5;
     padding: 50px;
     font-size: 1.5rem;
-  
-  }
-  
-.envio{
+    
+}
+.image__module{
+margin-bottom: 40px;
+}
+
+.go{
     background-color: #ff975a;
     display: flex;
     align-items: center;
     justify-content: center;
-    flex-direction: column;
-    color: #f0ebe5; 
-    height: 60vh;
-    gap:30px;
-}
-.img__envio{
-    height: 30%;
-    width: 30%;
+    flex-direction: row;
+    min-height: 50vh;
+    
 
 }
-.h1__envio{
-    color: white; 
-    font-size: 2rem;
+.img__go{
+    height: 17vh;
+    width: 20vw;
+    margin: auto;
+    display: block;
+    
+   
+
 }
-.p__envio{
-    color: white; 
-    font-size: 1.5rem;
+.h1__go{
+    color: #ffffff; 
+    font-size: 1.7rem;
+    text-align: center;
 }
-.h3__envio{
+.p__go{
+    color: #ffffff;
+    font-size: 1rem;
+}
+.h3__go{
     color: white; 
     text-decoration: underline;
-    font-size: 2rem;
+    font-size: 1.5rem;
+    text-align: center;
 }
-.disfruta{
+.enjoy{
     display:flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     background-color: #f0ebe5;
-    height: 80vh;
+    height: 60vh;
     gap: 30px;
     font-size: 1.5rem;
     color:  #0c474b;
     
 }
-.creando{
-    height: 100vh;
-    width: 100vw;
+.creating{
+    height: 30vh;
+    max-width: 100%;
     display:flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
-.boton__comprar2{
+.buy__button2{
     background-color: #0c474b;
-    width: 50vw;
+    width: 40vw;
     border-color: rgb(95, 124, 114);
-    color:#bdb9b5;
-    height: 10vh;
+    color:#ffffff;
+    height: 7vh;
     font-size: 1.5rem;
  
 }
-.boton__comprar2:hover{
-    background-color: #b6c8c9;
+.buy__button2:hover{
+    background-color: #f0ebe5;
     color:#0c474b;
-    border-radius: 50%;
+   
 }
 .img__creando{
-    height: 100vh;
-    width: 100vw;
+    min-height: 100vh;
+    min-height: 100vw;
 }
 .footer{
     display:grid;
@@ -170,23 +187,22 @@ h2 {
     text-align: justify;
     font-size: 1.5rem;
     padding-top: 15%;
-
     height: 70vh;
 }
 a{
     text-decoration: none;
 }
-.listado{
+.list{
     list-style: none;
     color:#bdb9b5;
 }
-.titulo_listado{
+.title_list{
     font-size: 2rem;
     color: #bdb9b5;
     text-decoration: none;
     list-style: none;
 }
-.listado2{
+.list2{
    padding-left: 15%;
     text-decoration: none;
     list-style: none;
@@ -207,8 +223,8 @@ li{
     place-items: end;
 }
 .flecha img{
-    width: 100%;
-    height: 100%;
+   min-width: 100%;
+    min-height: 100%;
 }
 
 @media all and (min-width:900px){
@@ -216,17 +232,18 @@ li{
     height: 20vh;
     width: 20vw;
     align-items: center;
-    gap:30 px
+    gap:30px;
+    margin: 0;
   }
  
-    .caja2{
+    .box2{
     width: 60%;
     height: 30vh;
     padding-left: 40px;
 
    }
    
-    .titulo_modulo_2{
+    .title_module_2{
         grid-column: span 3;
         font-size: 2rem;
         margin: 0, 20%, 0, 20%;
@@ -240,7 +257,7 @@ li{
     height: 30vh;
     gap: 10px;
     padding: 0;
-    text-align: justify;
+
     }
   
    .flecha{
@@ -248,10 +265,11 @@ li{
     width: 50px;
     align-items: flex-end;
     display: grid;
+  
    }
-   .img__envio{
-    height: 150px;
-    width: 150px;
+   .img__go{
+    height: 10vh;
+    width: 10vw;
 }
     .menu{
     text-align: justify;
@@ -261,37 +279,43 @@ li{
 
 }
 
-@media all and (min-width:1728) {
+@media all and (min-width:1728px) {
 .icon_burguer{
     height: 50px;
     width: 20px;
 }
-.boton__comprar{
+.buy__button{
     gap: 100px;
 }
-.img__envio{
-    height: 60px;
-    width: 60px;
+.img__go{
+    height: 20%;
+    width: 20%;
 }
 
-.modulo2{
+.module2{
     display: grid;
     grid-template-rows: 1fr 1fr;
-    grid-template-columns: 50% 25% 25%;
+    grid-template-columns: 1fr 1fr 1fr;
 }
-.imagen__modulo{
+.image__module{
     grid-column: span 2;
     
 }
 
 .img__creando{
-    display: flex;
+   
+    height: 80%;
+    width: 30%;
+}
+.enjoy{
+   
     height: 50%;
     width: 50%;
 }
-.disfruta{
+.module4{
     display: flex;
-    height: 50%;
-    width: 50%;
+    height: 50vh;
+    min-width: 100vh;
+   justify-content:center ;
 }
 }
