--- a/main.css
+++ b/main.css
@@ -32,15 +32,18 @@ html{
    position: fixed;
 
 }
-
+.menu_box1{
+    display: none;
+    
+}
 
 .logo{
     position:absolute;
     width: 200px;
     height: 110px;
-   align-items: center; 
-   justify-content: space-between; 
-   left:30%;
+    align-items: center; 
+    justify-content: space-between; 
+    left:30%;
 } 
 .box1{
     display: flex;
@@ -149,7 +152,7 @@ p {
     flex-direction:column;
     align-items: center;
     background-color: #f0ebe5;
-    height: 100vh;
+    height: 140vh;
   
 }
 .enjoy{
@@ -158,7 +161,7 @@ p {
     justify-content: center;
     align-items: center;
     background-color: #f0ebe5;
-    height: 50%;
+    height: 70vh;
     gap: 30px;
     font-size: 1.5rem;
     color:  #0c474b;
@@ -179,7 +182,7 @@ p {
    
 }
 .creating{
-    height: 50%;
+    height: 70vh;
     width: 100%;
     display: flex;
   
@@ -222,7 +225,8 @@ li a{
 }
 .up{
     display: flex;
-    padding-left: 150px;
+    padding-left: 50%;
+    padding-top: 0;
 }
 .img_up{
     width: 50px;
@@ -251,10 +255,11 @@ li a{
  
     .box2{
         display: flex;
-        width: 60%;
+        width: 100%;
         height: 30vh;
         justify-content: flex-start;
         align-items: start;
+    
    }
   
     .button{
@@ -264,28 +269,28 @@ li a{
         width: 200px;
        
     }
-   
+
     .title_module_2{
         grid-column: span 3;
         font-size: 2rem;
-        margin: 0, 20%, 0, 20%;
+        margin: 10%, 20%, 0, 20%;
         text-align: center;
     }
     .buy__button2{
         width: 200px;
        
    }
-
    .footer{
     display: grid;
     grid-template-columns: 20% 20% 30% 10%;
     height: 276px;
     width: 100%;
     margin: 0;
+    padding-left: 150px;
+    justify-content: space-between;
     }
 
   .list{
-    
     justify-items: start;
   }
   .redes{
@@ -296,56 +301,98 @@ li a{
     width: 50px;
     align-items: center;
     display: flex;
-    padding-left: 20px;
+    padding-left: 0;
+    padding-top: 130%;
     
    }
    .img__go{
     height: 20%;
     width: 20%;
 }
-
-
-
 }
 
 @media all and (min-width:1728px) {
+
 .icon_burguer{
-    height: 50px;
-    width: 20px;
+   display: none;
 }
+.box_1{
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    align-items: center;
+    height: 30vh;
+
+}
+.menu_box1{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height:30%; 
+    padding: 30px;  
+    list-style: none;
+    color:  #0c474b;
+    padding-left: 30px;
+    font-family: poppins;
+    font-size: 20px;
+}
+.list_box1{
+    display: flex;
+    flex-direction: row;
+    list-style: none;
+    gap: 25px;
+    
+
+}
+
+.logo{
+    align-items:end;
+    width: 200px;
+    height: 110px;  
+    align-items:end;
+       
+} 
+.box2{
+    height: 70vh;
+}
+
 .buy__button{
     gap: 100px;
 }
+
 .img__go{
-    height: 20%;
-    width: 20%;
+    height: 10%;
+    width: 10%;
+    padding-top: 5%;
 }
 
-.module2{
-    display: grid;
-    grid-template-rows: 1fr 1fr;
-    grid-template-columns: 1fr 1fr 1fr;
-}
-.image__module{
-    grid-column: span 2;
-    
-}
-
-.img__creando{
+.creating{
    
     height: 80%;
-    width: 30%;
+    width: 50%;
 }
 .enjoy{
    
-    height: 50%;
+    height: 80%;
     width: 50%;
 }
 .module4{
     display: flex;
-    height: 50vh;
+    flex-direction: row;
+    height: 80%;
     min-width: 100vh;
    justify-content:center ;
 }
-
+footer{
+    grid-template-columns: 25% 25% 25% 25%;
+    height: 396px;
+    width: 100%;
+    margin: 0;
+    padding-left: 150px;
+    gap: 0;
+    }
+    .up{
+        padding-top: 80%;
+       }
+    
 }
